--- a/templates/booksearch/Frontpage.html
+++ b/templates/booksearch/Frontpage.html
@@ -1,10 +1,10 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Bookworm</title>
-    <link rel="stylesheet" type="text/css" href="../../booksearch/static/booksearch/Frontpage.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="{% static 'booksearch/Frontpage.css' %}">
 </head>
 <body>
 <!--Navigation bar-->
@@ -18,9 +18,7 @@
     <!--Search box-->
     <div class="search">
         <input type="text" class="searchTerm" placeholder="Kirjuta siia, mida soovid otsida">
-        <button type="submit" class="searchButton">
-            <i class="fa fa-search"></i>
-        </button>
+        <button type="submit" class="searchButton">Otsi</button>
     </div>
 
 </div>
