--- a/templates/booksearch/Frontpage.html
+++ b/templates/booksearch/Frontpage.html
@@ -5,11 +5,12 @@
     <meta charset="UTF-8">
     <title>Bookworm</title>
     <link rel="stylesheet" type="text/css" href="{% static 'booksearch/Frontpage.css' %}">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 </head>
 <body>
 <!--Navigation bar-->
 <ul>
-    <li style="float:left"><a href="Frontpage.html">BOOKWORM</a></li>
+    <li style="float:left"><a href="https://vl2018-ryhm15.herokuapp.com/">BOOKWORM</a></li>
     <li onclick="document.getElementById('signup').style.display='block'">Sign up</a></li>
     <li onclick="document.getElementById('login').style.display='block'">Log in</li>
 </ul>
@@ -18,7 +19,9 @@
     <!--Search box-->
     <div class="search">
         <input type="text" class="searchTerm" placeholder="Kirjuta siia, mida soovid otsida">
-        <button type="submit" class="searchButton">Otsi</button>
+        <button type="submit" class="searchButton">
+            <i class="fa fa-search"></i>
+        </button>
     </div>
 
 </div>
