--- a/templates/booksearch/Frontpage.html
+++ b/templates/booksearch/Frontpage.html
@@ -11,8 +11,8 @@
 <!--Navigation bar-->
 <ul>
     <li style="float:left"><a href="https://vl2018-ryhm15.herokuapp.com/">BOOKWORM</a></li>
-    <li onclick="document.getElementById('signup').style.display='block'">Sign up</a></li>
-    <li onclick="document.getElementById('login').style.display='block'">Log in</li>
+    <li onclick="document.getElementById('login').style.display='none'; document.getElementById('signup').style.display='block'">Sign up</a></li>
+    <li onclick="document.getElementById('signup').style.display='none'; document.getElementById('login').style.display='block'">Log in</li>
 </ul>
 <div class="wrap">
 
