--- a/templates/booksearch/Frontpage.html
+++ b/templates/booksearch/Frontpage.html
@@ -6,7 +6,7 @@
     <title>Bookworm</title>
     <link rel="stylesheet" type="text/css" href="{% static 'booksearch/Frontpage.css' %}">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
-	<script type="text/javascript" src="{% static 'booksearch/scripts.js' %}"></script>
+	<script type="text/javascript" src="booksearch/scripts.js"></script>
     <!--<link rel="script" href="{% static 'booksearch/scripts.js' %}"> -->
 </head>
 <body>
@@ -65,7 +65,6 @@
         </div>
 
         <div class="container">
-            {{ form }}
             <button type="submit" id="signupButton">Loo kasutaja</button>
 
         </div>
