revertin form eemaldamise frontpage.html failist

--- a/templates/booksearch/Frontpage.html
+++ b/templates/booksearch/Frontpage.html
@@ -65,6 +65,7 @@
         </div>
 
         <div class="container">
+            {{ form }}
             <button type="submit" id="signupButton">Loo kasutaja</button>
 
         </div>
