--- a/templates/booksearch/Frontpage.html
+++ b/templates/booksearch/Frontpage.html
@@ -43,7 +43,7 @@
             <input type="text" placeholder="Sisesta parool" name="parool" required id="parool" />
 
             <button type="submit" id="loginButton">Logi sisse</button>
-            <label>
+            <label>Otsing
                 <input type="checkbox" checked="checked" name="mäleta">Mäleta mind
             </label>
         </div>
