kontrollivus html labelitel

--- a/templates/booksearch/Frontpage.html
+++ b/templates/booksearch/Frontpage.html
@@ -20,6 +20,7 @@
 
     <!--Search box-->
     <div class="search">
+		<label for="otsing">Otsing</label>
         <input type="text" class="searchTerm" placeholder="Kirjuta siia, mida soovid otsida">
         <button type="submit" class="searchButton">
             <i class="fa fa-search"></i>
@@ -43,7 +44,7 @@
             <input type="text" placeholder="Sisesta parool" name="parool" required id="parool" />
 
             <button type="submit" id="loginButton">Logi sisse</button>
-            <label>Otsing
+            <label for="mäleta">
                 <input type="checkbox" checked="checked" name="mäleta">Mäleta mind
             </label>
         </div>
