labelite parandus vol2

--- a/templates/booksearch/Frontpage.html
+++ b/templates/booksearch/Frontpage.html
@@ -21,7 +21,7 @@
     <!--Search box-->
     <div class="search">
 		<label for="otsing">Otsing</label>
-        <input type="text" class="searchTerm" placeholder="Kirjuta siia, mida soovid otsida">
+        <input type="text" class="searchTerm" placeholder="Kirjuta siia, mida soovid otsida" id="otsing">
         <button type="submit" class="searchButton">
             <i class="fa fa-search"></i>
         </button>
@@ -44,8 +44,8 @@
             <input type="text" placeholder="Sisesta parool" name="parool" required id="parool" />
 
             <button type="submit" id="loginButton">Logi sisse</button>
-            <label for="mäleta">
-                <input type="checkbox" checked="checked" name="mäleta">Mäleta mind
+            <label for="kast1">
+                <input id="kast1" type="checkbox" checked="checked" name="mäleta">Mäleta mind
             </label>
         </div>
 
