värvi kontrast vol1

--- a/static/booksearch/Frontpage.css
+++ b/static/booksearch/Frontpage.css
@@ -126,7 +126,7 @@ button:hover {
 .tühista {
     width: auto;
     padding: 10px 18px;
-    background-color: white;
+    background-color: #00B4CC;
 }
 
 .container {
