otsing tag eemaldatud

--- a/templates/booksearch/Frontpage.html
+++ b/templates/booksearch/Frontpage.html
@@ -20,7 +20,7 @@
 
     <!--Search box-->
     <div class="search">
-		<label for="otsing">Otsing</label>
+		<label for="otsing"></label>
         <input type="text" class="searchTerm" placeholder="Kirjuta siia, mida soovid otsida" id="otsing">
         <button type="submit" class="searchButton">
             <i class="fa fa-search"></i>
@@ -31,7 +31,7 @@
 
 <div id="login" class="popup">
 
-    <form class="popup-content animate">
+    <form class="popup-content animate"
         <div class="imgcontainer">
         <span onclick="document.getElementById('login').style.display='none'"
     class="sulge" title="Sulge">&times;</span>
