parandasin vea ära

--- a/templates/booksearch/Frontpage.html
+++ b/templates/booksearch/Frontpage.html
@@ -31,7 +31,7 @@
 
 <div id="login" class="popup">
 
-    <form class="popup-content animate"
+    <form class="popup-content animate">
         <div class="imgcontainer">
         <span onclick="document.getElementById('login').style.display='none'"
     class="sulge" title="Sulge">&times;</span>
