--- a/templates/booksearch/Frontpage.html
+++ b/templates/booksearch/Frontpage.html
@@ -66,7 +66,7 @@
         </div>
 
         <div class="container">
-            {{ form }}
+            <table>{{ form }}</table>
             <button type="submit" id="signupButton">Loo kasutaja</button>
         </div>
 
