parandan WCAG kehtivust

--- a/static/booksearch/Frontpage.css
+++ b/static/booksearch/Frontpage.css
@@ -30,7 +30,7 @@ li a {
 
 li {
     display: block;
-    color: white;
+    color: #00B4CC;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
