lisan otsingu barile labeli nime kehtivuse jaoks

--- a/templates/booksearch/Frontpage.html
+++ b/templates/booksearch/Frontpage.html
@@ -20,10 +20,11 @@
 
     <!--Search box-->
     <div class="search">
-		<label for="otsing"></label>
-        <input type="text" class="searchTerm" placeholder="Kirjuta siia, mida soovid otsida" id="otsing">
+		<label for="otsing">
+        Otsing<input type="text" class="searchTerm" placeholder="Kirjuta siia, mida soovid otsida" id="otsing">
+		</label>
         <button type="submit" class="searchButton">
-            <i class="fa fa-search"></i>
+            <em class="fa fa-search"></em>
         </button>
     </div>
 
