b muudetud em jaoks

--- a/templates/booksearch/Frontpage.html
+++ b/templates/booksearch/Frontpage.html
@@ -21,7 +21,7 @@
     <!--Search box-->
     <div class="search">
 		<label for="otsing">
-        Otsing<input type="text" class="searchTerm" placeholder="Kirjuta siia, mida soovid otsida" id="otsing">
+        <input type="text" class="searchTerm" placeholder="Kirjuta siia, mida soovid otsida" id="otsing">
 		</label>
         <button type="submit" class="searchButton">
             <em class="fa fa-search"></em>
@@ -39,9 +39,9 @@
         </div>
 
         <div class="container">
-            <label for="k_nimi"><b>Kasutajanimi</b></label>
+            <label for="k_nimi"><em>Kasutajanimi</em></label>
             <input type="text" placeholder="Sisesta kasutajanimi" name="k_nimi" required id="k_nimi" />
-            <label for="parool"><b>Parool</b></label>
+            <label for="parool"><em>Parool</em></label>
             <input type="text" placeholder="Sisesta parool" name="parool" required id="parool" />
 
             <button type="submit" id="loginButton">Logi sisse</button>
