--- a/static/booksearch/Frontpage.css
+++ b/static/booksearch/Frontpage.css
@@ -10,7 +10,7 @@ ul {
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: #00B4CC;
+    background-color: #006CCC;
     border-radius: 5px;
 }
 
