--- a/static/booksearch/Frontpage.css
+++ b/static/booksearch/Frontpage.css
@@ -10,7 +10,7 @@ ul {
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: #0099CC;
+    background-color: #008BCC;
     border-radius: 5px;
 }
 
