--- a/templates/booksearch/Frontpage.html
+++ b/templates/booksearch/Frontpage.html
@@ -21,7 +21,7 @@
     <!--Search box-->
     <div class="search">
 		<label for="otsing">
-        Otsing<input type="text" class="searchTerm" placeholder="Kirjuta siia, mida soovid otsida" id="otsing">
+        <input type="text" class="searchTerm" placeholder="Kirjuta siia, mida soovid otsida" id="otsing">
 		</label>
         <button type="submit" class="searchButton">
             <em class="fa fa-search"></em>
