--- a/static/booksearch/Frontpage.css
+++ b/static/booksearch/Frontpage.css
@@ -69,6 +69,7 @@ li:hover:not(.active) {
 
 .searchButton {
     position: absolute;
+    top: 100%;
     right: -50px;
     width: 40px;
     height: 36px;
