--- a/templates/booksearch/About.html
+++ b/templates/booksearch/About.html
@@ -8,14 +8,14 @@
     <script src="{% static 'booksearch/scripts.js' %}"></script>
 </head>
 <body>
-!--Navigation bar-->
+<!--!--Navigation bar-->
 <ul>
     <li style="float:left"><a href="https://vl2018-ryhm15.herokuapp.com/">BOOKWORM</a></li>
     <li onclick="document.getElementById('login').style.display='none'; document.getElementById('signup').style.display='block'">Sign up</li>
     <li onclick="document.getElementById('signup').style.display='none'; document.getElementById('login').style.display='block'">Log in</li>
-    <li><a href="about">About</a></li>
+    <li><a href="https://vl2018-ryhm15.herokuapp.com/about">About</a></li>
 </ul>
-<p>Mingi tekst...
+<p>Mingi tekst Bookwormi kohta...
 </p>
 
 <h3>Google Map</h3>
