--- a/templates/booksearch/Frontpage.html
+++ b/templates/booksearch/Frontpage.html
@@ -22,7 +22,7 @@
     <!--Search box-->
     <div class="search">
 		<label for="otsing">
-        Otsing<input type="text" class="searchTerm" placeholder="Kirjuta siia, mida soovid otsida" id="otsing">
+            <li><a href="https://vl2018-ryhm15.herokuapp.com/search">Otsing</a></li><input type="text" class="searchTerm" placeholder="Kirjuta siia, mida soovid otsida" id="otsing">
 		</label>
         <button type="submit" class="searchButton">
             <em class="fa fa-search"></em>
