--- a/templates/booksearch/Frontpage.html
+++ b/templates/booksearch/Frontpage.html
@@ -6,7 +6,7 @@
     <title>Bookworm</title>
     <link rel="stylesheet" type="text/css" href="{% static 'booksearch/Frontpage.css' %}">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
-	<script src="booksearch/scripts.js"></script>
+	<script src="{% static 'booksearch/scripts.js' %}"></script>
     <!--<link rel="script" href="{% static 'booksearch/scripts.js' %}"> -->
 </head>
 <body>
@@ -21,16 +21,18 @@
 
     <!--Search box-->
     <div class="search">
-		<label for="otsing">
-            <a href="https://vl2018-ryhm15.herokuapp.com/search">Otsing</a><input type="text" class="searchTerm" placeholder="Kirjuta siia, mida soovid otsida" id="otsing">
-		</label>
-        <button type="submit" class="searchButton">
+		<table id="otsinguvorm">
+            {{ search }}
+        </table>
+        <button type="submit" class="searchButton"
+        onclick="document.">
             <em class="fa fa-search"></em>
         </button>
     </div>
 
 </div>
 
+<!-- Login modal -->
 <div id="login" class="popup">
 
     <form class="popup-content animate">
@@ -59,6 +61,8 @@
     </form>
 </div>
 
+
+<!-- Signup modal -->
 <div id="signup" class="popup">
 
     <form class="popup-content animate" method="post">{% csrf_token %}
