vale contekstimuutuja kutsumise parandus

--- a/templates/booksearch/Search.html
+++ b/templates/booksearch/Search.html
@@ -19,7 +19,7 @@
     <div class="centered">
         <h2>Otsingu tulemused</h2>
         <table>
-            {% for item in tulem %}
+            {% for item in nimistik %}
             <tr>
                 <td>{{ item.pealkiri }}</td>
             </tr>
