--- a/templates/booksearch/Frontpage.html
+++ b/templates/booksearch/Frontpage.html
@@ -10,16 +10,24 @@
     <!--<link rel="script" href="{% static 'booksearch/scripts.js' %}"> -->
 </head>
 <body>
-<!--Navigation bar-->
-<ul>
+
+<!--Navigation bars-->
+<ul id="loggedOutNavbar">
     <li style="float:left"><a href="https://vl2018-ryhm15.herokuapp.com/">BOOKWORM</a></li>
     <li><a href="https://vl2018-ryhm15.herokuapp.com/about">About</a></li>
     <li onclick="document.getElementById('login').style.display='none'; document.getElementById('signup').style.display='block'">Sign up</li>
     <li onclick="document.getElementById('signup').style.display='none'; document.getElementById('login').style.display='block'">Log in</li>
 </ul>
+<!-- Teine navbar, mis kuvatakse sisselogitud kasutajale
+<ul id="loggedInNavbar" >
+    <li style="float:left"><a href="https://vl2018-ryhm15.herokuapp.com/">BOOKWORM</a></li>
+    <li><a href="https://vl2018-ryhm15.herokuapp.com/about">About</a></li>
+    <li onclick="document.getElementById('login').style.display='none'; document.getElementById('signup').style.display='block'">Sign up</li>
+    <li onclick="document.getElementById('signup').style.display='none'; document.getElementById('login').style.display='block'">Log in</li>
+</ul>
+-->
+<!--Search box-->
 <div class="wrap">
-
-    <!--Search box-->
     <form method="post">{% csrf_token %}
         <div class="search">
             <table id="otsinguvorm">
