--- a/templates/booksearch/Frontpage.html
+++ b/templates/booksearch/Frontpage.html
@@ -22,8 +22,9 @@
 <ul id="loggedInNavbar" >
     <li style="float:left"><a href="https://vl2018-ryhm15.herokuapp.com/">BOOKWORM</a></li>
     <li><a href="https://vl2018-ryhm15.herokuapp.com/about">About</a></li>
-    <li onclick="document.getElementById('login').style.display='none'; document.getElementById('signup').style.display='block'">Sign up</li>
-    <li onclick="document.getElementById('signup').style.display='none'; document.getElementById('login').style.display='block'">Log in</li>
+    <li>My lists</li>
+    <li>Log out</li>
+    <li>Settings</li>
 </ul>
 -->
 <!--Search box-->
