--- a/templates/booksearch/Search.html
+++ b/templates/booksearch/Search.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>Search</title>
     <link rel="stylesheet" type="text/css" href="{% static 'booksearch/Search.css' %}">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 </head>
 <body>
 <!--Navigation bar-->
@@ -26,6 +27,10 @@
             {% endfor %}
         </table>
     </div>
+</div>
+
+<div class="footer">
+    Siia tuleb Advanced Search...
 </div>
 
 <div class="split right">
