added frontpage css to search page dependencies

--- a/templates/booksearch/Search.html
+++ b/templates/booksearch/Search.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Search</title>
+    <link rel="stylesheet" type="text/css" href="{% static 'booksearch/Frontpage.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'booksearch/Search.css' %}">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 </head>
