--- a/templates/booksearch/Search.html
+++ b/templates/booksearch/Search.html
@@ -81,7 +81,7 @@
         </div>
 
         <div class="container">
-            <table>{{ form }}</table>
+            <table>{{ signupform }}</table>
             <button type="submit" id="signupButton">Loo kasutaja</button>
         </div>
 
