--- a/templates/booksearch/Search.html
+++ b/templates/booksearch/Search.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <!--Navigation bar-->
-<ul>
+<ul id="loggedOutNavbar">
     <li style="float:left"><a href="https://vl2018-ryhm15.herokuapp.com/">BOOKWORM</a></li>
     <li><a href="https://vl2018-ryhm15.herokuapp.com/about">About</a></li>
     <li onclick="document.getElementById('login').style.display='none'; document.getElementById('signup').style.display='block'">Sign up</li>
