lisasin meta tagid kirjelduse ja märksõnade jaoks

--- a/templates/booksearch/MyLists.html
+++ b/templates/booksearch/MyLists.html
@@ -3,6 +3,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+	<meta name="description" content="Raamatu otsingumootori Bookworm otsingu tulemuste leht">
+	<meta name="keywords" content="bookworm,search,otsi,raamat,raamatud,otsi raamatuid,raamatu otsingumootor">
     <title>MyLists</title>
     <link rel="stylesheet" type="text/css" href="{% static 'booksearch/MyLists.css' %}">
     <script src="{% static 'booksearch/scripts.js' %}"></script>
