--- a/templates/booksearch/Search.html
+++ b/templates/booksearch/Search.html
@@ -3,6 +3,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+	<meta name="description" content = "Raamatu otsingumootori Bookwormi otsinguleht">
+	<meta name="keywords" content="raamat,otsing,bookworm,otsi raamatuid">
     <title>Search</title>
     <link rel="stylesheet" type="text/css" href="{% static 'booksearch/Search.css' %}">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
