--- a/templates/booksearch/About.html
+++ b/templates/booksearch/About.html
@@ -3,6 +3,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+	<meta name="description" content="Raamatu otsingumootori Bookworm info leht"> 
+	<meta name="keywords" content="bookworm,about,info,raamatu otsingumootor,raamat,otsing,otsi raamatuid">
     <title>About</title>
     <link rel="stylesheet" type="text/css" href="{% static 'booksearch/About.css' %}">
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
