--- a/templates/booksearch/Frontpage.html
+++ b/templates/booksearch/Frontpage.html
@@ -3,6 +3,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+	<meta name="description" content="Raamatu otsingumootor Bookworm, arendatud Tartu Ülikooli aine Veebirakenduste loomise raames Rühm15 poolt">
+	<meta name="keyowrds" content="raamatu otsing,otsi raamatuid,raamat,otsi,bookworm,raamatu otsingumootor"> 
     <title>Bookworm</title>
     <link rel="stylesheet" type="text/css" href="{% static 'booksearch/Frontpage.css' %}">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
