--- a/templates/booksearch/About.html
+++ b/templates/booksearch/About.html
@@ -16,8 +16,8 @@
             var yOffset = window.pageYOffset; // Gets the vertical scroll position
             var y = yOffset + window.innerHeight;
             if (y >= contentHeight) {
-                wrap.innerHTML = '<img src="https://www.incimages.com/uploaded_files/image/970x450/getty_598063032_349381.jpg">' +'<br>'
-                    + '<img src="https://cdn-images-1.medium.com/max/1024/1*YLlZ96J3p8GFkIh1USVMzg.jpeg">';
+                wrap.innerHTML = '<img src="https://www.incimages.com/uploaded_files/image/970x450/getty_598063032_349381.jpg" alt="Raamatud1">' +'<br>'
+                    + '<img src="https://cdn-images-1.medium.com/max/1024/1*YLlZ96J3p8GFkIh1USVMzg.jpeg" alt="Raamatud2">';
                 // Ajax call to get more dynamic data
             }
         };
@@ -46,7 +46,7 @@
     väga väga laaaahee....
 </p>
 <div id="wrap">
-    <img src="https://www.incimages.com/uploaded_files/image/970x450/getty_598063032_349381.jpg">
+    <img src="https://www.incimages.com/uploaded_files/image/970x450/getty_598063032_349381.jpg" alt="Raamatud1">
 </div>
 </body>
 </html>
