--- a/templates/booksearch/About.html
+++ b/templates/booksearch/About.html
@@ -25,7 +25,7 @@
     </script>
 </head>
 <body>
-<!--!--Navigation bar-->
+<!--Navigation bar-->
 <ul>
     <li style="float:left"><a href="https://vl2018-ryhm15.herokuapp.com/">BOOKWORM</a></li>
     <li><a href="https://vl2018-ryhm15.herokuapp.com/about">About</a></li>
@@ -37,8 +37,9 @@
 
 <h3>Google Map</h3>
 <div id="map"></div>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDjW6r72Usb-ahHQt1hqqUIL-gIPHa5VLI&callback=initMap"
-        async defer>initMap()</script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDjW6r72Usb-ahHQt1hqqUIL-gIPHa5VLI&callback=initMap" async defer>
+    initMap()
+</script>
 
 <p>Bookworm on väga lahe,<br>
     väga lahe,<br>
