Trying to fix About.html for html check

--- a/templates/booksearch/About.html
+++ b/templates/booksearch/About.html
@@ -36,10 +36,10 @@
 </p>
 
 <h3>Google Map</h3>
-<div id="map"></div>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDjW6r72Usb-ahHQt1hqqUIL-gIPHa5VLI&callback=initMap" async defer>
+<div id="map"><script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDjW6r72Usb-ahHQt1hqqUIL-gIPHa5VLI&callback=initMap" async defer>
     initMap()
 </script>
+</div>
 
 <p>Bookworm on väga lahe,<br>
     väga lahe,<br>
