working signin-out system

--- a/templates/booksearch/Search.html
+++ b/templates/booksearch/Search.html
@@ -53,11 +53,7 @@
         </div>
 
         <div class="container">
-            <label for="k_nimi"><em>Kasutajanimi</em></label>
-            <input type="text" placeholder="Sisesta kasutajanimi" name="k_nimi" required id="k_nimi" />
-            <label for="parool"><em>Parool</em></label>
-            <input type="text" placeholder="Sisesta parool" name="parool" required id="parool" />
-
+            <table>{{ loginform }}</table>
             <button type="submit" id="loginButton">Logi sisse</button>
             <label for="kast1">
                 <input id="kast1" type="checkbox" checked="checked" name="mäleta">Mäleta mind
