--- a/templates/booksearch/Frontpage.html
+++ b/templates/booksearch/Frontpage.html
@@ -14,21 +14,24 @@
 <body>
 
 <!--Navigation bars-->
-<ul id="loggedOutNavbar">
+<!-- Teine navbar, mis kuvatakse sisselogitud kasutajale -->
+
+{% if user.is_authenticated %}
+<ul id="loggedInNavbar">
     <li style="float:left"><a href="https://vl2018-ryhm15.herokuapp.com/">BOOKWORM</a></li>
+    <li><a href="https://vl2018-ryhm15.herokuapp.com/about">About</a></li>
+    <li>User: {{ user.get_username }}</li>
+    <li><a href="{% url 'signout' %}">Log out</a></li>
+    <li>Settings</li>
+</ul>
+{% else %}
+<ul id="loggedOutNavbar">
+    <li style="float:left"><a href="/">BOOKWORM</a></li>
     <li><a href="https://vl2018-ryhm15.herokuapp.com/about">About</a></li>
     <li onclick="document.getElementById('login').style.display='none'; document.getElementById('signup').style.display='block'">Sign up</li>
     <li onclick="document.getElementById('signup').style.display='none'; document.getElementById('login').style.display='block'">Log in</li>
 </ul>
-<!-- Teine navbar, mis kuvatakse sisselogitud kasutajale
-<ul id="loggedInNavbar" >
-    <li style="float:left"><a href="https://vl2018-ryhm15.herokuapp.com/">BOOKWORM</a></li>
-    <li><a href="https://vl2018-ryhm15.herokuapp.com/about">About</a></li>
-    <li>My lists</li>
-    <li>Log out</li>
-    <li>Settings</li>
-</ul>
--->
+{% endif %}
 <!--Search box-->
 <div class="wrap">
     <form method="post">{% csrf_token %}
@@ -46,18 +49,14 @@
 <!-- Login modal -->
 <div id="login" class="popup">
 
-    <form class="popup-content animate">
+    <form class="popup-content animate" method="post">{% csrf_token %}
         <div class="imgcontainer">
         <span onclick="document.getElementById('login').style.display='none'"
     class="sulge" title="Sulge">&times;</span>
         </div>
 
         <div class="container">
-            <label for="k_nimi"><em>Kasutajanimi</em></label>
-            <input type="text" placeholder="Sisesta kasutajanimi" name="k_nimi" required id="k_nimi" />
-            <label for="parool"><em>Parool</em></label>
-            <input type="text" placeholder="Sisesta parool" name="parool" required id="parool" />
-
+            <table>{{ loginform }}</table>
             <button type="submit" id="loginButton">Logi sisse</button>
             <label for="kast1">
                 <input id="kast1" type="checkbox" checked="checked" name="mäleta">Mäleta mind
