--- a/templates/booksearch/About.html
+++ b/templates/booksearch/About.html
@@ -36,9 +36,9 @@
 </p>
 
 <h3>Google Map</h3>
-<div id="map"><script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDjW6r72Usb-ahHQt1hqqUIL-gIPHa5VLI&callback=initMap" async defer>
-    initMap()
-</script>
+<div id="map">
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDjW6r72Usb-ahHQt1hqqUIL-gIPHa5VLI&callback=initMap" async defer></script>
+    <script>initMap()</script>
 </div>
 
 <p>Bookworm on väga lahe,<br>
