Tulemuste arv loetakse count()-funktsiooniga, lisatakse raamatute nimekirja päisesse

--- a/templates/booksearch/Search.html
+++ b/templates/booksearch/Search.html
@@ -21,7 +21,7 @@
 
 <div class="split left">
     <div class="centered">
-        <h2>Otsingu tulemused</h2>
+        <h2>{{ tulemuste_sone }}</h2>
         <table>
             {% for item in nimistik %}
             <tr>
