--- a/templates/booksearch/About.html
+++ b/templates/booksearch/About.html
@@ -6,6 +6,7 @@
 	<meta name="description" content="Raamatu otsingumootori Bookworm info leht"> 
 	<meta name="keywords" content="bookworm,about,info,raamatu otsingumootor,raamat,otsing,otsi raamatuid">
     <title>About</title>
+    <link rel="stylesheet" type="text/css" href="{% static 'booksearch/Frontpage.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'booksearch/About.css' %}">
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script src="{% static 'booksearch/scripts.js' %}"></script>
@@ -20,18 +21,83 @@
                     + '<img src="https://cdn-images-1.medium.com/max/1024/1*YLlZ96J3p8GFkIh1USVMzg.jpeg" alt="Raamatud2">';
                 // Ajax call to get more dynamic data
             }
-        };
+        }
         window.onscroll = yHandler;
     </script>
 </head>
 <body>
-<!--Navigation bar-->
-<ul>
+
+<!--Navigation bars-->
+<!-- Teine navbar, mis kuvatakse sisselogitud kasutajale -->
+{% if user.is_authenticated %}
+<ul id="loggedInNavbar">
+    <li style="float:left"><a href="https://vl2018-ryhm15.herokuapp.com/">BOOKWORM</a></li>
+    <li><a href="https://vl2018-ryhm15.herokuapp.com/about">About</a></li>
+    <li>User: {{ user.get_username }}</li>
+    <li><a href="{% url 'signout' %}">Log out</a></li>
+    <li>Settings</li>
+</ul>
+{% else %}
+<ul id="loggedOutNavbar">
     <li style="float:left"><a href="https://vl2018-ryhm15.herokuapp.com/">BOOKWORM</a></li>
     <li><a href="https://vl2018-ryhm15.herokuapp.com/about">About</a></li>
     <li onclick="document.getElementById('login').style.display='none'; document.getElementById('signup').style.display='block'">Sign up</li>
     <li onclick="document.getElementById('signup').style.display='none'; document.getElementById('login').style.display='block'">Log in</li>
 </ul>
+{% endif %}
+
+<!-- Login modal -->
+<div id="login" class="popup">
+
+    <form class="popup-content animate" method="post">{% csrf_token %}
+        <div class="imgcontainer">
+        <span onclick="document.getElementById('login').style.display='none'"
+    class="sulge" title="Sulge">&times;</span>
+        </div>
+
+        <div class="container">
+            <table>{{ loginform }}</table>
+            <button type="submit" id="loginButton">Logi sisse</button>
+            <label for="kast1">
+                <input id="kast1" type="checkbox" checked="checked" name="mäleta">Mäleta mind
+            </label>
+        </div>
+
+        <div align="center">
+            <a href="{% url 'social:begin' 'google-oauth2' %}"><img src="{% static 'booksearch/btn_google_signin_light_normal_web.png' %}"></a>
+        </div>
+        <div class="container">
+            <button type="button" onclick="document.getElementById('login').style.display='none'"
+                    class="tühista">Tühista</button>
+            <span class="parool"><a href="#">Unustasid parooli?</a> </span>
+        </div>
+        <br>
+    </form>
+</div>
+
+
+<!-- Signup modal -->
+<div id="signup" class="popup">
+
+    <form class="popup-content animate" method="post">{% csrf_token %}
+        <div class="imgcontainer">
+        <span onclick="document.getElementById('signup').style.display='none'"
+    class="sulge" title="Sulge">&times;</span>
+        </div>
+
+        <div class="container">
+            <table>{{ signupform }}</table>
+            <button type="submit" id="signupButton">Loo kasutaja</button>
+        </div>
+
+        <div class="container">
+            <button type="button" onclick="document.getElementById('signup').style.display='none'"
+                    class="tühista">Tühista</button>
+        </div>
+    </form>
+</div>
+
+
 <p>Mingi tekst Bookwormi kohta...
 </p>
 
