--- a/templates/booksearch/Search.html
+++ b/templates/booksearch/Search.html
@@ -24,7 +24,7 @@
 </ul>
 {% else %}
 <ul id="loggedOutNavbar">
-    <li style="float:left"><a href="/">BOOKWORM</a></li>
+    <li style="float:left"><a href="https://vl2018-ryhm15.herokuapp.com/">BOOKWORM</a></li>
     <li><a href="https://vl2018-ryhm15.herokuapp.com/about">About</a></li>
     <li onclick="document.getElementById('login').style.display='none'; document.getElementById('signup').style.display='block'">Sign up</li>
     <li onclick="document.getElementById('signup').style.display='none'; document.getElementById('login').style.display='block'">Log in</li>
