--- a/templates/booksearch/About.html
+++ b/templates/booksearch/About.html
@@ -64,7 +64,7 @@
         </div>
 
         <div align="center">
-            <a href="{% url 'social:begin' 'google-oauth2' %}"><img src="{% static 'booksearch/btn_google_signin_light_normal_web.png' %}"></a>
+            <a href="{% url 'social:begin' 'google-oauth2' %}"><img src="{% static 'booksearch/btn_google_signin_light_normal_web.png' %}" alt="Sign in with Google"></a>
         </div>
         <div class="container">
             <button type="button" onclick="document.getElementById('login').style.display='none'"
