Google nupp keskele

--- a/templates/booksearch/About.html
+++ b/templates/booksearch/About.html
@@ -63,7 +63,7 @@
             </label>
         </div>
 
-        <div>
+        <div id="googleauth">
             <a href="{% url 'social:begin' 'google-oauth2' %}"><img src="{% static 'booksearch/btn_google_signin_light_normal_web.png' %}" alt="Sign in with Google"></a>
         </div>
         <div class="container">
