--- a/templates/booksearch/Frontpage.html
+++ b/templates/booksearch/Frontpage.html
@@ -62,7 +62,7 @@
             </label>
         </div>
 
-        <div id="googleauth">
+        <div class="center">
             <a href="{% url 'social:begin' 'google-oauth2' %}"><img src="{% static 'booksearch/btn_google_signin_light_normal_web.png' %}" alt="Sign in with Google"></a>
         </div>
         <div class="container">
