--- a/templates/booksearch/Frontpage.html
+++ b/templates/booksearch/Frontpage.html
@@ -63,7 +63,7 @@
         </div>
 
         <div class="center">
-            <a href="{% url 'social:begin' 'google-oauth2' %}"><img src="{% static 'booksearch/btn_google_signin_light_normal_web.png' %}" alt="Sign in with Google"></a>
+            <a class= "center" href="{% url 'social:begin' 'google-oauth2' %}"><img src="{% static 'booksearch/btn_google_signin_light_normal_web.png' %}" alt="Sign in with Google"></a>
         </div>
         <div class="container">
             <button type="button" onclick="document.getElementById('login').style.display='none'"
