--- a/static/booksearch/About.css
+++ b/static/booksearch/About.css
@@ -57,6 +57,6 @@ li:hover:not(.active) {
 }
 
 .center {
-    margin:auto;
-    align-content: center;
+    margin-left: auto;
+    margin-right: auto;
 }
