--- a/templates/booksearch/Search.html
+++ b/templates/booksearch/Search.html
@@ -72,8 +72,8 @@
             </label>
         </div>
 
-        <div class="center">
-            <a class= "center" href="{% url 'social:begin' 'google-oauth2' %}"><img src="{% static 'booksearch/btn_google_signin_light_normal_web.png' %}" alt="Sign in with Google"></a>
+        <div>
+            <a href="{% url 'social:begin' 'google-oauth2' %}"><img src="{% static 'booksearch/btn_google_signin_light_normal_web.png' %}" alt="Sign in with Google" class="center"></a>
         </div>
         <div class="container">
             <button type="button" onclick="document.getElementById('login').style.display='none'"
