--- a/templates/booksearch/Search.html
+++ b/templates/booksearch/Search.html
@@ -7,6 +7,7 @@
 	<meta name="keywords" content="raamat,otsing,bookworm,otsi raamatuid">
     <title>Search</title>
     <link rel="stylesheet" type="text/css" href="{% static 'booksearch/Search.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'booksearch/Frontpage.css' %}">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
     <script src="{% static 'booksearch/scripts.js' %}"></script>
 </head>
@@ -73,7 +74,7 @@
         </div>
 
         <div class="center">
-            <a class= "center" href="{% url 'social:begin' 'google-oauth2' %}"><img src="{% static 'booksearch/btn_google_signin_light_normal_web.png' %}" alt="Sign in with Google"></a>
+            <a href="{% url 'social:begin' 'google-oauth2' %}"><img class= "center" src="{% static 'booksearch/btn_google_signin_light_normal_web.png' %}" alt="Sign in with Google"></a>
         </div>
         <div class="container">
             <button type="button" onclick="document.getElementById('login').style.display='none'"
